Fixed some typos & add more info in randoop coverage

--- a/builders.tex
+++ b/builders.tex
@@ -579,7 +579,7 @@ métodos con la siguiente estructura:
 
 $metodoGenerador^* + metodoNoGenerador$. 
 
-\cacho{Debo cambiar estoy y TENGO QUE ENTENDER COMO REESCRIBIR ESTE ALGORITMO}
+\cacho{Debo entender como modificar el algoritmo basandonos en la estructura de arriba y que se entienda. Explicar linea por linea.}
 El algoritmo 
 
 \begin{algorithm}[H]
@@ -775,7 +775,6 @@ Este valor fue determinado experimentalmente para equilibrar la exploración y l
 En nuestro contexto de detección de métodos generadores de objetos, la mutación introduce variaciones en las secuencias de activación de métodos dentro de la API bajo prueba,  
 permitiendo la exploración de configuraciones y ampliando el espacio de búsqueda.  
 De esta manera, el algoritmo puede descubrir combinaciones más eficientes que no surgirían únicamente mediante cruzamiento. }
-
 
 Para nuestro caso concreto, como ya explicamos, cada posición del cromosoma representa un método específico de la API, entonces
 una mutación en la posición 2 implicaría activar o desactivar la ejecución del método $Método3$.
